--- a/install
+++ b/install
@@ -7,6 +7,7 @@ git clone https://github.com/janoma/dotfiles ~/.dotfiles
 
 echo "Configuring $fg[green]tmux${reset_color}..."
 ln -si ~/.dotfiles/tmux/tmux.conf ~/.tmux.conf
+cp -i ~/.dotfiles/tmux/tmux.conf.local ~/.tmux.conf.local
 
 echo "Configuring $fg[green]git${reset_color}..."
 ln -si ~/.dotfiles/git/gitconfig ~/.gitconfig
@@ -38,5 +39,8 @@ ln -si ~/.dotfiles/zsh/p10k.zsh ~/.p10k.zsh
 
 echo "Configuring $fg[green]zsh${reset_color}..."
 ln -si ~/.dotfiles/zsh/zshrc ~/.zshrc
+
+echo "Installing $fg[green]iStats${reset_color} (requires sudo)..."
+sudo gem install iStats
 
 echo "$fg[green]Done!${reset_color} Enjoy your zsh"
