--- a/install
+++ b/install
@@ -25,7 +25,7 @@ then
 fi;
 
 echo "Installing $fg[green]basic packages${reset_color}..."
-brew install htop reattach-to-user-namespace ripgrep stockfish tmux wget zsh-autosuggestions zsh-syntax-highlighting
+brew install htop reattach-to-user-namespace ripgrep stockfish tmux tmuxinator wget zsh-autosuggestions zsh-syntax-highlighting
 brew tap beeftornado/rmtree
 
 echo "Installing $fg[green]oh-my-zsh${reset_color}..."
