--- a/install
+++ b/install
@@ -25,9 +25,27 @@ then
 fi;
 
 echo "Installing $fg[green]basic packages${reset_color}..."
-brew install htop direnv nvm openssl ripgrep tmux tmuxinator wget zsh-autosuggestions zsh-syntax-highlighting trash ffmpeg
+brew install htop \
+             direnv \
+             nvm \
+             openssl \
+             ripgrep \
+             tmux \
+             tmuxinator \
+             wget \
+             zsh \
+             autosuggestions \
+             zsh-syntax-highlighting \
+             trash \
+             ffmpeg \
+             mpv \
+             stats \
+             pnpm
 brew tap beeftornado/rmtree
 brew install --cask notunes
+brew install --cask raycast
+brew install --cask visual-studio-code
+brew install --cask polypane
 
 echo "Installing $fg[green]oh-my-zsh${reset_color}..."
 sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
